--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ PORT=3000
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=family_monitor
-DB_USER=postgres
-DB_PASSWORD=Admin
+DB_NAME=family_monitor_qw6c
+DB_USER=family_monitor_qw6c_user
+DB_PASSWORD=8fiUnxM6z57fWBN0Rr9JmCkfk9QHxLR6
 
 # Optional Pool Settings
 DB_MAX=20
