--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 
 # Database Configuration
-DB_HOST=https://guardian-test-api.onrender.com
+DB_HOST=dpg-d1c12pqdbo4c73cfhapg-a
 DB_PORT=5432
 DB_NAME=family_monitor_qw6c
 DB_USER=family_monitor_qw6c_user
