--- a/package.json
+++ b/package.json
@@ -1,28 +1,49 @@
 {
-    "name": "family-monitor-api",
+    "name": "guard-api",
     "version": "1.0.0",
-    "description": "Family Device Monitor API",
+    "description": "Guard API Service",
     "main": "server.js",
+    "engines": {
+        "node": ">=18.0.0",
+        "npm": ">=8.0.0"
+    },
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
+        "start": "node --no-deprecation server.js",
+        "dev": "nodemon --no-deprecation server.js",
         "test": "jest",
-        "test:db": "node test-db.js"
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "postinstall": "echo 'Build completed successfully'"
     },
     "dependencies": {
-        "bcryptjs": "^2.4.3",
+        "axios": "^1.10.0",
+        "bcryptjs": "^3.0.2",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.5.0",
         "express": "^4.18.2",
-        "helmet": "^6.1.5",
+        "express-rate-limit": "^7.5.1",
+        "express-slow-down": "^2.0.1",
+        "express-validator": "^7.0.1",
+        "firebase-admin": "^13.4.0",
+        "helmet": "^8.1.0",
         "joi": "^17.9.2",
-        "jsonwebtoken": "^9.0.2",
-        "pg": "^8.11.0",
-        "razorpay": "^2.9.6",
-        "uuid": "^9.0.0"
+        "jsonwebtoken": "^9.0.0",
+        "morgan": "^1.10.0",
+        "pg": "^8.10.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^11.1.0",
+        "winston": "^3.11.0",
+        "xss-clean": "^0.1.4"
     },
     "devDependencies": {
+        "eslint": "^8.57.0",
         "jest": "^29.5.0",
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.10",
+        "prettier": "^3.2.5"
+    },
+    "config": {
+        "production": false
     }
 }
